<?xml version="1.0" encoding="utf-8"?>
<WebView xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/privacy_policy"
  android:layout_width="match_parent"
  android:layout_height="match_parent"/>