<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <group android:checkableBehavior="single">
    <item
      android:id="@+id/nav_lists"
      android:icon="@drawable/favorite_filled"
      android:title="@string/nav_lists"/>
    <item
      android:id="@+id/nav_browse"
      android:icon="@drawable/action_search"
      android:title="@string/nav_discover"/>
    <item
      android:id="@+id/nav_pitch_pipe"
      android:icon="@drawable/note_quarter_black"
      android:title="@string/nav_pitch_pipe"/>
    <item
      android:id="@+id/nav_settings"
      android:icon="@drawable/action_settings"
      android:title="@string/nav_settings"/>
  </group>

</menu>