...
  <PreferenceCategory android:title="About">

    <PreferenceScreen
      android:icon="@drawable/policy"
      android:key="pref_key_privacy"
      android:summary="View our privacy policy"
      android:title="Privacy Policy" />

  </PreferenceCategory>
</PreferenceScreen>
