...
    android:layout_marginTop="15dp"
    android:layout_marginEnd="15dp"
    android:layout_marginRight="15dp"
    android:orientation="vertical">

    <TextView
      android:id="@+id/tag_detail_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_vertical"
      android:ellipsize="end"
      android:maxLines="1"
      android:text="@string/tag_name"
...
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <TextView
        android:id="@+id/tag_detail_arranger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/by_arranger"
        android:textColor="@color/lightSecondaryTitle"
        android:textSize="14sp" />
...
        android:textColor="@color/lightSecondaryTitle"
        android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
      android:id="@+id/tag_detail_rating"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="2dp"
      android:gravity="center_vertical"
      android:orientation="horizontal">

...
      android:text="@string/tag_menu_lists"
      android:textColor="@color/lightSecondaryTitle"
      android:textSize="12sp"
      android:theme="@style/PrimaryFlatButton" />

    <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/tag_detail_rate_button"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:background="?attr/selectableItemBackgroundBorderless"
      android:drawableTop="@drawable/star_transparent"
      android:drawablePadding="2dp"
...
      android:text="@string/tag_menu_rate"
      android:textColor="@color/lightSecondaryTitle"
      android:textSize="12sp"
      android:theme="@style/PrimaryFlatButton" />

    <com.spelder.tagyourit.ui.tag.PitchButton
      android:id="@+id/tag_detail_key_button"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:background="?attr/selectableItemBackgroundBorderless"
      android:drawableTop="@drawable/key_transparent"
      android:drawablePadding="2dp"
      android:text="@string/tag_menu_key"
      android:textColor="@color/lightSecondaryTitle"
      android:textSize="12sp"
      android:theme="@style/PrimaryFlatButton" />

    <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/tag_detail_share_button"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:background="?attr/selectableItemBackgroundBorderless"
      android:drawableTop="@drawable/share"
      android:drawablePadding="2dp"
...
          android:layout_marginBottom="10dp"
          android:gravity="start|center_vertical"
          android:text="@string/tag_menu_tracks"
          android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/tag_detail_track_all"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:drawableStart="@drawable/play_circle_outline"
          android:drawablePadding="30dp"
          android:fontFamily="sans-serif"
          android:gravity="start|center_vertical"
...
          android:textAllCaps="false"
          android:textColor="@color/lightSecondaryTitle"
          android:textSize="15sp"
          android:theme="@style/PrimaryFlatButton" />

        <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/tag_detail_track_tenor"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:drawableStart="@drawable/play_circle_tenor"
          android:drawablePadding="30dp"
          android:fontFamily="sans-serif"
          android:gravity="start|center_vertical"
...
          android:textAllCaps="false"
          android:textColor="@color/lightSecondaryTitle"
          android:textSize="15sp"
          android:theme="@style/PrimaryFlatButton" />

        <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/tag_detail_track_lead"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:drawableStart="@drawable/play_circle_lead"
          android:drawablePadding="30dp"
          android:fontFamily="sans-serif"
          android:gravity="start|center_vertical"
...
          android:textAllCaps="false"
          android:textColor="@color/lightSecondaryTitle"
          android:textSize="15sp"
          android:theme="@style/PrimaryFlatButton" />

        <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/tag_detail_track_bass"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:drawableStart="@drawable/play_circle_bass"
          android:drawablePadding="30dp"
          android:fontFamily="sans-serif"
          android:gravity="start|center_vertical"
...
          android:textAllCaps="false"
          android:textColor="@color/lightSecondaryTitle"
          android:textSize="15sp"
          android:theme="@style/PrimaryFlatButton" />

        <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/tag_detail_track_bari"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:drawableStart="@drawable/play_circle_bari"
          android:drawablePadding="30dp"
          android:fontFamily="sans-serif"
          android:gravity="start|center_vertical"
...
          android:layout_marginBottom="10dp"
          android:gravity="start|center_vertical"
          android:text="@string/tag_menu_video_title"
          android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/tag_detail_video_1"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:drawableStart="@drawable/video_1"
          android:drawablePadding="30dp"
          android:ellipsize="end"
          android:fontFamily="sans-serif"
...
          android:textAllCaps="false"
          android:textColor="@color/lightSecondaryTitle"
          android:textSize="15sp"
          android:theme="@style/PrimaryFlatButton" />

        <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/tag_detail_video_more"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:drawableStart="@drawable/video_circle_outline"
          android:drawablePadding="30dp"
          android:ellipsize="end"
          android:fontFamily="sans-serif"
...
