<resources>
  <string name="app_name">Tag You\'re It</string>

  <string name="error_text">Error Text</string>
  <string name="no_pdf">No Sheet Music Available</string>
  <string name="try_again">Try Again</string>
  <string name="music_content_description">Sheet Music Identifier</string>
  <string name="track_content_description">Track Identifier</string>
  <string name="video_content_description">Video Identifier</string>
  <string name="long_version">Long version</string>
  <string name="by_arranger">Arranger</string>
  <string name="tag_name">Tag Name</string>
  <string name="separator">·</string>
  <string name="rating_icon_description">Rating icon</string>

  <string name="nav_discover">Discover</string>
  <string name="nav_lists">Lists</string>
  <string name="nav_settings">Settings</string>
  <string name="nav_pitch_pipe">Pitch Pipe</string>

  <string name="action_add_to_default_list">Add to Default List</string>
  <string name="action_delete_from_default_list">Remove from Default List</string>
  <string name="action_search">Search</string>
  <string name="action_sort">Sort</string>
  <string name="action_add_list">Add List</string>
  <string name="action_delete_list">Delete List</string>
  <string name="action_list_options">List Options</string>
  <string name="action_menu">Menu</string>

  <string name="network_error">No network connection available.</string>
  <string name="previous">Previous</string>
  <string name="next">Next</string>

  <string name="no_results">No Results Found</string>
  <string name="no_favorites">No Tags</string>
  <string name="close">Close</string>
  <string name="playbackControl">Playback Control</string>

  <string name="tuning">Tuning</string>
  <string name="update">Update Frequency</string>

  <string name="balance">Balance</string>
  <string name="speed">Speed:</string>
  <string name="speed_start_value">1x</string>
  <string name="pitch">Semitones:</string>
  <string name="pitch_start_value">0</string>
  <string name="seek_bar_start">00:00</string>
  <string name="seek_bar_end">-00:00</string>
  <string name="title">Title</string>
  <string name="voice_part">Voice Part</string>

  <string name="pitch_sharp_flat">#/b</string>
  <string name="pitch_flat_sharp">b/#</string>
  <string name="pitch_a">A</string>
  <string name="pitch_ab">Ab</string>
  <string name="pitch_b">B</string>
  <string name="pitch_bb">Bb</string>
  <string name="pitch_c">C</string>
  <string name="pitch_d">D</string>
  <string name="pitch_db">Db</string>
  <string name="pitch_e">E</string>
  <string name="pitch_eb">Eb</string>
  <string name="pitch_f">F</string>
  <string name="pitch_g">G</string>
  <string name="pitch_gb">Gb</string>

  <string name="sung_key">Key of</string>
  <string name="views">views</string>

  <string name="tag_menu_key">Key</string>
  <string name="tag_menu_tracks">Tracks</string>
  <string name="tag_menu_all_parts">All Parts</string>
  <string name="tag_menu_tenor">Tenor</string>
  <string name="tag_menu_lead">Lead</string>
  <string name="tag_menu_bass">Bass</string>
  <string name="tag_menu_bari">Bari</string>
  <string name="tag_menu_other1">Other</string>
  <string name="tag_menu_other2">Other</string>
  <string name="tag_menu_other3">Other</string>
  <string name="tag_menu_other4">Other</string>
  <string name="tag_menu_video_title">Videos</string>
  <string name="tag_menu_video1">Video 1</string>
  <string name="tag_menu_video2">Video 2</string>
  <string name="tag_menu_video3">Video 3</string>
  <string name="tag_menu_video4">Video 4</string>
  <string name="tag_menu_video_more">More…</string>
  <string name="tag_menu_rate">Rate</string>
  <string name="tag_menu_share">Share</string>
  <string name="tag_menu_lists">Lists</string>

  <string name="video_all">All Videos</string>

  <string name="filter_part_key">filter_part</string>
  <string name="filter_sheet_music_key">filter_sheet_music</string>
  <string name="filter_learning_track_key">filter_learning_track</string>
  <string name="filter_key_key">filter_key</string>
  <string name="filter_type_key">filter_type</string>
  <string name="filter_rating_key">filter_rating</string>
  <string name="filter_collection_key">filter_collection</string>

  <string name="sort_title">Sort by</string>
  <string name="sort_by_newest_posted">Posted Date (Newest)</string>
  <string name="sort_by_rating">Rating</string>
  <string name="sort_by_downloads">Number of Downloads</string>
  <string name="sort_by_title">Title</string>
  <string name="apply">Apply</string>

  <string name="filter_any">Any</string>
  <string name="filter_parts_title">Parts</string>
  <string name="filter_sheet_music_title">Sheet Music</string>
  <string name="filter_learning_tracks_title">Learning Tracks</string>
  <string name="filter_key_title">Key</string>
  <string name="filter_type_title">Type</string>
  <string name="filter_rating_title">Minimum Rating</string>
  <string name="filter_collection_title">Collection</string>

  <string name="filter_parts_four">4</string>
  <string name="filter_parts_five">5</string>
  <string name="filter_parts_six">6</string>
  <string name="filter_parts_seven">7</string>
  <string name="filter_parts_eight">8</string>

  <string name="filter_type_barbershop">Barbershop</string>
  <string name="filter_type_sweet_adelines">Sweet Adeline</string>
  <string name="filter_type_satb">SATB</string>
  <string name="filter_type_other_male">Other male</string>
  <string name="filter_type_other_female">Other female</string>
  <string name="filter_type_other_mixed">Other mixed</string>

  <string name="filter_rating_0">0</string>
  <string name="filter_rating_0_5">0.5</string>
  <string name="filter_rating_1">1</string>
  <string name="filter_rating_1_5">1.5</string>
  <string name="filter_rating_2">2</string>
  <string name="filter_rating_2_5">2.5</string>
  <string name="filter_rating_3">3</string>
  <string name="filter_rating_3_5">3.5</string>
  <string name="filter_rating_4">4</string>
  <string name="filter_rating_4_5">4.5</string>

  <string name="filter_collection_classic">Classic</string>
  <string name="filter_collection_easy">Easy</string>
  <string name="filter_collection_100">100 Days</string>

  <string name="list_new">Create new list</string>
  <string name="list_select">Select lists for tag</string>
  <string name="list_update">Update list options</string>
  <string name="list_name_hint">List name</string>
  <string name="list_icon_description">Icon for list</string>
  <string name="list_download_sheet">Download sheet</string>
  <string name="list_download_track">Download track</string>
  <string name="list_default_list">Default list</string>
  <string name="list_create_button">Create list</string>
  <string name="list_update_button">Update list</string>
  <string name="list_entry_default_count">0</string>
  <string name="list_entry_count_label">&#160;tags</string>
</resources>
