...
  android:id="@+id/sheet_view"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <com.ortiz.touchview.TouchImageView
    android:id="@+id/image"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:background="@android:color/white"
    android:scaleType="fitCenter"
    android:visibility="gone"/>

  <com.github.barteksc.pdfviewer.PDFView
    android:id="@+id/pdfView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone"/>

  <LinearLayout
    android:id="@+id/pdfLoading"
...
