<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="horizontal"
  android:paddingStart="14dp"
  android:paddingTop="14dp"
  android:paddingEnd="14dp"
  android:paddingBottom="14dp">

  <com.google.android.youtube.player.YouTubeThumbnailView
    android:id="@+id/video_list_thumbnail"
    android:layout_width="160dp"
    android:layout_height="90dp"
    android:layout_gravity="center_vertical"/>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="15dp"
    android:orientation="vertical">

    <TextView
      android:id="@+id/video_list_title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ellipsize="end"
      android:maxLines="2"
      android:textColor="@android:color/white"
      android:textSize="14sp"/>

    <LinearLayout
      android:id="@+id/video_list_posted_by_layout"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <TextView
        android:id="@+id/video_list_posted_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text=""
        android:textColor="@color/lightText"
        android:textSize="12sp"/>

    </LinearLayout>

    <LinearLayout
      android:id="@+id/video_list_key_layout"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/sung_key"
        android:textColor="@color/lightText"
        android:textSize="12sp"/>

      <TextView
        android:id="@+id/video_list_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/lightText"
        android:textSize="12sp"/>

    </LinearLayout>

    <LinearLayout
      android:id="@+id/video_list_views_layout"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <TextView
        android:id="@+id/video_list_views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/lightText"
        android:textSize="12sp"/>

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/views"
        android:textColor="@color/lightText"
        android:textSize="12sp"/>

    </LinearLayout>

  </LinearLayout>

</LinearLayout>